--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,18 @@ on:
   push:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: go.mod
+          cache: true
+      - name: test
+        run: go test ./... -race -coverprofile=coverage.out -covermode=atomic
+      - uses: codecov/codecov-action@v3
+
   build:
     runs-on: ubuntu-latest
     steps:
