--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,16 @@ jobs:
         with:
           go-version-file: go.mod
           cache: true
-      - name: test
-        run: go test ./...
       - uses: goreleaser/goreleaser-action@v4
         with:
           args: release --rm-dist --snapshot
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: go.mod
+          cache: true
+      - uses: golangci/golangci-lint-action@v3
